# WebCoEvo

./: .dockerignore  .env.example  .gitignore  README-cn.md  README.md  pyproject.toml
configs/: focus20_hardv3_full.raw.json  focus20_hardv3_smoke.raw.json  taskbank36_hardv3_full.raw.json
docker/: Dockerfile.runner  README.md
linkding_xvr_minimal/: __init__.py  agent.py  agentlab_agent.py  benchmark.py  browser_task.py  expel_rules.py  export.py  prompting.py  reporting_hardv3.py  reporting_poster_summary.py  reporting_version_lines.py  rulebook.py  runner.py  runtime.py  tasks.py  vl_message_utils.py
paper/: PAPER_PLAN.md  PAPER_WRITING_PIPELINE_REPORT.md  figures.py  main.bbl  main.tex  math_commands.tex  poster.py  references.bib
rulebooks/: expel_official_v2.json  expel_smoke_access.json  no_xvr_empty.json  v2_4.json  v2_4_1.json  v2_5.json  v2_6.json
scripts/: build_episode_artifact.py  build_expel_rules_from_recovery.py  build_linkding_v241_candidate.py  build_linkding_v241_casebook.py  build_linkding_v241_manifest.py  build_recovery_artifact.py  build_reflection_delta_slice.py  build_reflection_rules.py  build_xvr_transition_artifact.py  check_openai_compat.py  decide_reflection_promotion.py  mine_reflection_gaps.py  verify_reflection_rulebook.py  verify_rule_coverage.py  verify_trace_rules.py
slurm/: run_hardv3_variant_singularity.slurm.sh  run_smoke_access_singularity.slurm.sh  submit_control_rules_matrix.sh  submit_first_modified_rules_matrix.sh  submit_full.sh  submit_hardv3_matrix.sh  submit_smoke.sh
tests/: test_agentlab_multiaction.py  (+47 more)
(+131 files in other folders)
